proj3/CactusParser.java
// Generated from Cactus.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CactusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ELSE=1, INT=2, MAIN=3, RETURN=4, WHILE=5, READ=6, WRITE=7, FI=8, IF=9, 
		ID=10, UID=11, CONST=12, ADD=13, SUB=14, MUL=15, DIV=16, MOD=17, ASSIGN=18, 
		EQU=19, NE=20, GE=21, GT=22, LE=23, LT=24, AND=25, OR=26, NOT=27, LP=28, 
		RP=29, LB=30, RB=31, SEMI=32, WS=33, COMMENT=34;
	public static final int
		RULE_program = 0, RULE_declarations = 1, RULE_statements = 2, RULE_statement = 3, 
		RULE_else_statement = 4, RULE_bool_expression = 5, RULE_bool_expression1 = 6, 
		RULE_bool_term = 7, RULE_bool_term1 = 8, RULE_bool_factor = 9, RULE_rel_expression = 10, 
		RULE_relation_op = 11, RULE_arith_expression = 12, RULE_arith_expression1 = 13, 
		RULE_arith_term = 14, RULE_arith_term1 = 15, RULE_arith_factor = 16, RULE_primary_expression = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declarations", "statements", "statement", "else_statement", 
			"bool_expression", "bool_expression1", "bool_term", "bool_term1", "bool_factor", 
			"rel_expression", "relation_op", "arith_expression", "arith_expression1", 
			"arith_term", "arith_term1", "arith_factor", "primary_expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'else'", "'int'", "'main'", "'return'", "'while'", "'read'", "'write'", 
			"'fi'", "'if'", null, null, null, "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'='", "'=='", "'!='", "'>='", "'>'", "'<='", "'<'", "'&&'", "'||'", 
			"'!'", "'('", "')'", "'{'", "'}'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ELSE", "INT", "MAIN", "RETURN", "WHILE", "READ", "WRITE", "FI", 
			"IF", "ID", "UID", "CONST", "ADD", "SUB", "MUL", "DIV", "MOD", "ASSIGN", 
			"EQU", "NE", "GE", "GT", "LE", "LT", "AND", "OR", "NOT", "LP", "RP", 
			"LB", "RB", "SEMI", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cactus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CactusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(CactusParser.MAIN, 0); }
		public TerminalNode LP() { return getToken(CactusParser.LP, 0); }
		public TerminalNode RP() { return getToken(CactusParser.RP, 0); }
		public TerminalNode LB() { return getToken(CactusParser.LB, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RB() { return getToken(CactusParser.RB, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(MAIN);
			setState(37);
			match(LP);
			setState(38);
			match(RP);
			setState(39);
			match(LB);
				 System.out.println("\t" + ".data");
			setState(41);
			declarations();

					System.out.println("\t" + ".text");
					System.out.println("main:");
				
			setState(43);
			statements(0,1);
			setState(44);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode INT() { return getToken(CactusParser.INT, 0); }
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode SEMI() { return getToken(CactusParser.SEMI, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitDeclarations(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(INT);
				setState(47);
				((DeclarationsContext)_localctx).ID = match(ID);

					System.out.println((((DeclarationsContext)_localctx).ID!=null?((DeclarationsContext)_localctx).ID.getText():null)+":\t.word\t0");	


				setState(49);
				match(SEMI);
				setState(50);
				declarations();
				}
				break;
			case RETURN:
			case WHILE:
			case READ:
			case WRITE:
			case IF:
			case ID:
			case RB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public StatementContext statement;
		public StatementsContext statements;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementsContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements(int reg,int label) throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 4, RULE_statements);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
			case WHILE:
			case READ:
			case WRITE:
			case IF:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				((StatementsContext)_localctx).statement = statement(_localctx.reg,_localctx.label);
				setState(55);
				((StatementsContext)_localctx).statements = statements(((StatementsContext)_localctx).statement.nreg,((StatementsContext)_localctx).statement.nlabel);

					((StatementsContext)_localctx).nreg = ((StatementsContext)_localctx).statements.nreg;
					((StatementsContext)_localctx).nlabel = ((StatementsContext)_localctx).statements.nlabel;

				}
				break;
			case RB:
				enterOuterAlt(_localctx, 2);
				{

					((StatementsContext)_localctx).nreg = _localctx.reg;
					((StatementsContext)_localctx).nlabel = _localctx.label;

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int nreg;
		public int nlabel;
		public Token ID;
		public Arith_expressionContext arith_expression;
		public Bool_expressionContext bool_expression;
		public StatementsContext statements;
		public Else_statementContext else_statement;
		public TerminalNode ID() { return getToken(CactusParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(CactusParser.ASSIGN, 0); }
		public Arith_expressionContext arith_expression() {
			return getRuleContext(Arith_expressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CactusParser.SEMI, 0); }
		public TerminalNode IF() { return getToken(CactusParser.IF, 0); }
		public TerminalNode LP() { return getToken(CactusParser.LP, 0); }
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public TerminalNode RP() { return getToken(CactusParser.RP, 0); }
		public TerminalNode LB() { return getToken(CactusParser.LB, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RB() { return getToken(CactusParser.RB, 0); }
		public Else_statementContext else_statement() {
			return getRuleContext(Else_statementContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(CactusParser.WHILE, 0); }
		public TerminalNode READ() { return getToken(CactusParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(CactusParser.WRITE, 0); }
		public TerminalNode RETURN() { return getToken(CactusParser.RETURN, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public StatementContext(ParserRuleContext parent, int invokingState, int reg, int label) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement(int reg,int label) throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState(), reg, label);
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				((StatementContext)_localctx).ID = match(ID);
				setState(62);
				match(ASSIGN);
				setState(63);
				((StatementContext)_localctx).arith_expression = arith_expression(_localctx.reg,_localctx.label);

					System.out.println("\tla\t$t"+((StatementContext)_localctx).arith_expression.nreg+", "+(((StatementContext)_localctx).ID!=null?((StatementContext)_localctx).ID.getText():null));
					System.out.println("\tsw\t$t"+((StatementContext)_localctx).arith_expression.place+", 0($t"+((StatementContext)_localctx).arith_expression.nreg+")");
					((StatementContext)_localctx).nreg =  ((StatementContext)_localctx).arith_expression.nreg-1;
					((StatementContext)_localctx).nlabel = ((StatementContext)_localctx).arith_expression.nlabel;

				setState(65);
				match(SEMI);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(IF);
				setState(68);
				match(LP);

					int b_true=_localctx.label++;
					int b_false=_localctx.label++;
					//int b_next=_localctx.label++;

				setState(70);
				((StatementContext)_localctx).bool_expression = bool_expression(_localctx.reg,_localctx.label,b_true,b_false);
				setState(71);
				match(RP);
				setState(72);
				match(LB);

					System.out.println("L"+b_true+":");

				setState(74);
				((StatementContext)_localctx).statements = statements(((StatementContext)_localctx).bool_expression.nreg,((StatementContext)_localctx).bool_expression.nlabel);
				setState(75);
				match(RB);
				setState(76);
				((StatementContext)_localctx).else_statement = else_statement(((StatementContext)_localctx).statements.nreg,((StatementContext)_localctx).statements.nlabel,b_false);

					((StatementContext)_localctx).nreg = ((StatementContext)_localctx).else_statement.nreg;
					((StatementContext)_localctx).nlabel = ((StatementContext)_localctx).else_statement.nlabel;

				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{

					int L_Begin=_localctx.label++;
					System.out.println("L"+L_Begin+":");

				setState(80);
				match(WHILE);
				setState(81);
				match(LP);

					int b_true=_localctx.label++;
					int b_false=_localctx.label++;

				setState(83);
				((StatementContext)_localctx).bool_expression = bool_expression(_localctx.reg,_localctx.label,b_true,b_false);
				setState(84);
				match(RP);
				setState(85);
				match(LB);

					System.out.println("L"+b_true+":");

				setState(87);
				((StatementContext)_localctx).statements = statements(((StatementContext)_localctx).bool_expression.nreg,((StatementContext)_localctx).bool_expression.nlabel);

					System.out.println("\tb\tL"+L_Begin);

				setState(89);
				match(RB);

					System.out.println("L"+b_false+":");
					((StatementContext)_localctx).nreg = ((StatementContext)_localctx).statements.nreg;
					((StatementContext)_localctx).nlabel = ((StatementContext)_localctx).statements.nlabel;

				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				match(READ);
				setState(93);
				((StatementContext)_localctx).ID = match(ID);

					System.out.println("\tli\t$vo, 5");
					System.out.println("\tsyscall");
					System.out.println("\tla\t$t"+_localctx.reg+", "+(((StatementContext)_localctx).ID!=null?((StatementContext)_localctx).ID.getText():null));
					System.out.println("\tsw\t$vo, 0($t"+_localctx.reg+")");
					((StatementContext)_localctx).nreg = _localctx.reg;
					((StatementContext)_localctx).nlabel = _localctx.label;

				setState(95);
				match(SEMI);
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 5);
				{
				setState(96);
				match(WRITE);
				setState(97);
				((StatementContext)_localctx).arith_expression = arith_expression(_localctx.reg,_localctx.label);

					System.out.println("\tmove\t$a0, $t"+((StatementContext)_localctx).arith_expression.place);
					System.out.println("\tli\t$v0, 1");
					System.out.println("\tsyscall");
					((StatementContext)_localctx).nreg = ((StatementContext)_localctx).arith_expression.nreg;
					((StatementContext)_localctx).nlabel = ((StatementContext)_localctx).arith_expression.nlabel;

				setState(99);
				match(SEMI);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 6);
				{
				setState(101);
				match(RETURN);

					System.out.println("\tli\t$vo, 10");
					System.out.println("\tsyscall");
					((StatementContext)_localctx).nreg = 0;
					((StatementContext)_localctx).nlabel = _localctx.label;

				setState(103);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Else_statementContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int b_false;
		public int nreg;
		public int nlabel;
		public StatementsContext statements;
		public TerminalNode ELSE() { return getToken(CactusParser.ELSE, 0); }
		public TerminalNode LB() { return getToken(CactusParser.LB, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RB() { return getToken(CactusParser.RB, 0); }
		public TerminalNode FI() { return getToken(CactusParser.FI, 0); }
		public Else_statementContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Else_statementContext(ParserRuleContext parent, int invokingState, int reg, int label, int b_false) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
			this.b_false = b_false;
		}
		@Override public int getRuleIndex() { return RULE_else_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterElse_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitElse_statement(this);
		}
	}

	public final Else_statementContext else_statement(int reg,int label,int b_false) throws RecognitionException {
		Else_statementContext _localctx = new Else_statementContext(_ctx, getState(), reg, label, b_false);
		enterRule(_localctx, 8, RULE_else_statement);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELSE:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(ELSE);
				setState(107);
				match(LB);

					int b_next=_localctx.label+1;
					System.out.println("\tb\t:"+b_next);
					System.out.println("L"+_localctx.b_false+":");

				setState(109);
				((Else_statementContext)_localctx).statements = statements(_localctx.reg,_localctx.label);

					System.out.println("L"+b_next+":");
					((Else_statementContext)_localctx).nreg = ((Else_statementContext)_localctx).statements.nreg;
					((Else_statementContext)_localctx).nlabel = ((Else_statementContext)_localctx).statements.nlabel;

				setState(111);
				match(RB);

					System.out.println("L"+_localctx.b_false+":");
					((Else_statementContext)_localctx).nreg = _localctx.reg;
					((Else_statementContext)_localctx).nlabel = _localctx.label;

				setState(113);
				match(FI);
				}
				break;
			case FI:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(FI);

					System.out.println("L"+_localctx.b_false+":");

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_expressionContext extends ParserRuleContext {
		public int reg;
		public int label;
		public int b_true;
		public int b_false;
		public int nreg;
		public int nlabel;
		public Bool_termContext bool_term;
		public Bool_expression1Context bool_expression1;
		public Bool_termContext bool_term() {
			return getRuleContext(Bool_termContext.class,0);
		}
		public Bool_expression1Context bool_expression1() {
			return getRuleContext(Bool_expression1Context.class,0);
		}
		public Bool_expressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Bool_expressionContext(ParserRuleContext parent, int invokingState, int reg, int label, int b_true, int b_false) {
			super(parent, invokingState);
			this.reg = reg;
			this.label = label;
			this.b_true = b_true;
			this.b_false = b_false;
		}
		@Override public int getRuleIndex() { return RULE_bool_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).enterBool_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CactusListener ) ((CactusListener)listener).exitBool_expression(this);
		}
	}

	public final Bool_expressionContext bool_expression(int reg,int label,int b_true,int b_false) throws RecognitionException {
		Bool_expressionContext _localctx = new Bool_expressionContext(_ctx, getState(), reg, label, b_true, b_false);
		enterRule(_localctx, 10, RULE_bool_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{

				int bt_f=_localctx.label++;
